--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,213 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="white">
+    tools:context=".ChatActivity">
+    <include/>
+<!--        app:date="@{'Dez 20'}"  />   parei aqui. ver como passa os paramentros e aqui defino as variaveis-->
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <androidx.cardview.widget.CardView
-            cardBackgroundColor="android:blue"
-            android:layout_width="match_parent"
-            android:layout_height="65dp"
-            app:cardBackgroundColor="#074EAD"
-            app:cardCornerRadius="0dp" >
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/profile"
-                android:layout_marginLeft="35dp"
-                />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/money"
-                android:layout_gravity="right"
-                android:layout_marginRight="12dp"/>
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/less"
-                android:rotation="270"/>
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/Branco"
-                android:text="Nome prestador"
-                android:textSize="18dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
-                android:fontFamily="sans-serif-black"/>
 
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:textColor="@color/Branco"
-                android:text="Função prestador"
-                android:textSize="18dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
-               />
+    <include layout="@layout/item_friend"/>
 
+    <include layout="@layout/item_friend"/>
 
-        </androidx.cardview.widget.CardView>
+    <include layout="@layout/item_friend"/>
 
-    </LinearLayout>
+    <include layout="@layout/item_friend"/>
 
-    <androidx.cardview.widget.CardView
-        cardBackgroundColor="android:blue"
-        android:layout_width="match_parent"
-        android:layout_height="710dp"
-        app:cardBackgroundColor="#0000"
-        >
+    <include layout="@layout/item_friend"/>
 
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            />
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="200dp"
-            />
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
-            android:layout_marginTop="100dp"
-           android:layout_marginLeft="340dp" />
+    <include layout="@layout/item_friend"/>
 
-        <ImageView
-            android:id="@+id/imageView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="200dp"
-            />
+    <include layout="@layout/item_friend"/>
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="400dp"
-            />
-        <ImageView
-            android:id="@+id/imageView14"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
-            android:layout_marginTop="300dp"
-            android:layout_marginLeft="340dp" />
-
-        <ImageView
-            android:id="@+id/imageView15"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
-            android:layout_marginTop="500dp"
-            android:layout_marginLeft="340dp" />
-
-        <ImageView
-            android:id="@+id/imageView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="600dp"
-            />
-
-        />
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        cardBackgroundColor="android:blue"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardBackgroundColor="#223263">
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="310dp"
-            android:layout_height="35dp"
-            android:layout_gravity="left"
-            app:cardBackgroundColor="#F5F5F5"
-            app:cardCornerRadius="19dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginLeft="30dp"
-            >
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Digite uma mensagem..."
-                android:textSize="18dp"/>
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                app:srcCompat="@drawable/attach"
-                android:layout_gravity="right"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
-                android:rotation="340"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:text="Button"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:backgroundTint="#0000000"
-            android:shadowColor="#223263"
-            />
-
-        <ImageView
-            android:id="@+id/imageAudio"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            app:srcCompat="@drawable/audio"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5"/>
-
-
-    </androidx.cardview.widget.CardView>
+    <include layout="@layout/item_friend"/>
 
 
 </LinearLayout>
+</layout>
